fixed shimmer component visibility

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
         <img src="./src/assets/404.svg" alt="PageLogo">
     </div>
 </body>
-<script type="module" src="/src/script.js"></script>
+<script type="module" src="/src/main.js"></script>
 </html>
